Fix magazine styling menus spacing

--- a/app/assets/stylesheets/themes/magazine-3.css.sass
+++ b/app/assets/stylesheets/themes/magazine-3.css.sass
@@ -47,8 +47,12 @@
 
     padding-top: 0
 
+    nav
+      margin-top: $line-height
+
     header[data-title]
       height: auto
+      margin-top: $line-height
       margin-bottom: $line-height
       h1
         font:
