--- a/app/assets/stylesheets/themes/magazine.css.sass
+++ b/app/assets/stylesheets/themes/magazine.css.sass
@@ -49,9 +49,13 @@
 
     padding-top: 0
 
+    nav
+      margin-top: $line-height
+
     header[data-title]
-      height: 0
-      margin-top: 0
+      height: auto
+      margin-top: $line-height
+      margin-bottom: $line-height
       h1
         font:
           family: 'quatro-slab', serif
